--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                 <div class="col-lg-4 col-md-6 mb-4">
                     <div class="comida">
                         <div class="imagenalimento">
-                            <img src="src/as.jpg" alt="Bebida">
+                            <img src="src/hotcakes.webp" alt="Bebida">
                         </div>
                         <div class="descripcion">
                             <p>Hot cakes</p>
@@ -165,7 +165,7 @@
                 <div class="col-lg-4 col-md-6 mb-4">
                     <div class="comida">
                         <div class="imagenalimento">
-                            <img src="src/as.jpg" alt="Bebida">
+                            <img src="src/chilaquiles.webp" alt="Bebida">
                         </div>
                         <div class="descripcion">
                             <p>Chilaquiles verdes</p>
@@ -176,7 +176,7 @@
                 <div class="col-lg-4 col-md-6 mb-4">
                     <div class="comida">
                         <div class="imagenalimento">
-                            <img src="src/as.jpg" alt="Bebida">
+                            <img src="src/sopetradicional.webp" alt="Bebida">
                         </div>
                         <div class="descripcion">
                             <p>Sopes tradicionales</p>
@@ -192,7 +192,7 @@
                 <div class="col-lg-4 col-md-6 mb-4">
                     <div class="comida">
                         <div class="imagenalimento">
-                            <img src="src/as.jpg" alt="Bebida">
+                            <img src="src/alambre.jpeg" alt="Bebida">
                         </div>
                         <div class="descripcion">
                             <p>Alambres</p>
@@ -203,7 +203,7 @@
                 <div class="col-lg-4 col-md-6 mb-4">
                     <div class="comida">
                         <div class="imagenalimento">
-                            <img src="src/as.jpg" alt="Bebida">
+                            <img src="src/parrillada.png" alt="Bebida">
                         </div>
                         <div class="descripcion">
                             <p>Parrillada</p>
@@ -214,7 +214,7 @@
                 <div class="col-lg-4 col-md-6 mb-4">
                     <div class="comida">
                         <div class="imagenalimento">
-                            <img src="src/as.jpg" alt="Bebida">
+                            <img src="src/birria.jpeg" alt="Bebida">
                         </div>
                         <div class="descripcion">
                             <p>Birria</p>
@@ -230,7 +230,7 @@
                 <div class="col-lg-4 col-md-6 mb-4">
                     <div class="comida">
                         <div class="imagenalimento">
-                            <img src="src/as.jpg" alt="Bebida">
+                            <img src="src/frutosrojos.jpeg" alt="Bebida">
                         </div>
                         <div class="descripcion">
                             <p>Limonada de frutos rojos</p>
@@ -241,7 +241,7 @@
                 <div class="col-lg-4 col-md-6 mb-4">
                     <div class="comida">
                         <div class="imagenalimento">
-                            <img src="src/as.jpg" alt="Bebida">
+                            <img src="src/smothie.png" alt="Bebida">
                         </div>
                         <div class="descripcion">
                             <p>Smoothie de yogurt</p>
@@ -252,7 +252,7 @@
                 <div class="col-lg-4 col-md-6 mb-4">
                     <div class="comida">
                         <div class="imagenalimento">
-                            <img src="src/as.jpg" alt="Bebida">
+                            <img src="src/cafe.png" alt="Bebida">
                         </div>
                         <div class="descripcion">
                             <p>Café</p>
