--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                 <div class="col-lg-4 col-md-6 mb-4">
                     <div class="comida">
                         <div class="imagenalimento">
-                            <img src="src/chilaquiles.webp" alt="Bebida">
+                            <img src="src/chilaquiles.png" alt="Bebida">
                         </div>
                         <div class="descripcion">
                             <p>Chilaquiles verdes</p>
