--- a/index.html
+++ b/index.html
@@ -30,16 +30,16 @@
                                     </ol>
                                     <div class="carousel-inner">
                                         <div class="carousel-item active">
-                                            <img class="d-block w-100" src="src/1.jpeg" alt="First slide">
+                                            <img class="d-block w-100" src="src/webp/1.webp" alt="First slide">
                                         </div>
                                         <div class="carousel-item">
-                                            <img class="d-block w-100" src="src/2.jpeg" alt="Second slide">
+                                            <img class="d-block w-100" src="src/webp/2.webp" alt="Second slide">
                                         </div>
                                         <div class="carousel-item">
-                                            <img class="d-block w-100" src="src/3.jpeg" alt="Third slide">
+                                            <img class="d-block w-100" src="src/webp/3.webp" alt="Third slide">
                                         </div>
                                         <div class="carousel-item">
-                                            <img class="d-block w-100" src="src/4.jpeg" alt="Fourth slide"> <!-- Nueva imagen -->
+                                            <img class="d-block w-100" src="src/webp/4.webp" alt="Fourth slide"> <!-- Nueva imagen -->
                                         </div>
                                         
                                     </div>
@@ -155,7 +155,7 @@
                 <div class="col-lg-4 col-md-6 mb-4">
                     <div class="comida">
                         <div class="imagenalimento">
-                            <img src="src/hotcakes.webp" alt="Bebida">
+                            <img src="src/webp/hotcakes.webp" alt="Bebida">
                         </div>
                         <div class="descripcion">
                             <p>Hot cakes</p>
@@ -177,7 +177,7 @@
                 <div class="col-lg-4 col-md-6 mb-4">
                     <div class="comida">
                         <div class="imagenalimento">
-                            <img src="src/sopetradicional.webp" alt="Bebida">
+                            <img src="src/webp/sopetradicional.webp" alt="Bebida">
                         </div>
                         <div class="descripcion">
                             <p>Sopes tradicionales</p>
@@ -193,7 +193,7 @@
                 <div class="col-lg-4 col-md-6 mb-4">
                     <div class="comida">
                         <div class="imagenalimento">
-                            <img src="src/alambre.jpeg" alt="Bebida">
+                            <img src="src/webp/alambre.webp" alt="Bebida">
                         </div>
                         <div class="descripcion">
                             <p>Alambres</p>
@@ -215,7 +215,7 @@
                 <div class="col-lg-4 col-md-6 mb-4">
                     <div class="comida">
                         <div class="imagenalimento">
-                            <img src="src/birria.jpeg" alt="Bebida">
+                            <img src="src/webp/birria.webp" alt="Bebida">
                         </div>
                         <div class="descripcion">
                             <p>Birria</p>
@@ -261,21 +261,6 @@
                     </div>
                 </div>
             </div>
-
-            <!--Mostrar el menú-->
-            <!--
-                <div class="text-center">
-                <p class="text-center">
-                    <a href="">Conoce todos nuestros platillos aquí:</a>
-                    <div class="carta">
-                        <a href="https://www.facebook.com"> <img src="src/menu.png" alt="Menú"> </a>
-                    </div>
-                </p>
-            </div>
-            -->
-
-
-            <!--Reservaciones-->
             
         </div> <br>
         <footer>
