some labels fixed for accessibility

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                 <div class="col-lg-4 col-md-6 mb-4">
                     <div class="comida">
                         <div class="imagenalimento">
-                            <img src="src/webp/hotcakes.webp" alt="Bebida">
+                            <img src="src/webp/hotcakes.webp" alt="hotcake acompañado de arandanos y platano, también incluye miel">
                         </div>
                         <div class="descripcion">
                             <p>Hot cakes</p>
@@ -166,7 +166,7 @@
                 <div class="col-lg-4 col-md-6 mb-4">
                     <div class="comida">
                         <div class="imagenalimento">
-                            <img src="src/chilaquiles.png" alt="Bebida">
+                            <img src="src/chilaquiles.png" alt="Chilaquiles con jugo de tomate y pollo acompañados de queso y crema">
                         </div>
                         <div class="descripcion">
                             <p>Chilaquiles verdes</p>
@@ -177,7 +177,7 @@
                 <div class="col-lg-4 col-md-6 mb-4">
                     <div class="comida">
                         <div class="imagenalimento">
-                            <img src="src/webp/sopetradicional.webp" alt="Bebida">
+                            <img src="src/webp/sopetradicional.webp" alt="Sope con frijoles y carne molida, incluye lechuga y queso">
                         </div>
                         <div class="descripcion">
                             <p>Sopes tradicionales</p>
@@ -193,7 +193,7 @@
                 <div class="col-lg-4 col-md-6 mb-4">
                     <div class="comida">
                         <div class="imagenalimento">
-                            <img src="src/webp/alambre.webp" alt="Bebida">
+                            <img src="src/webp/alambre.webp" alt="Carne con queso asadero, incluye pimiento amarillo, cilatro y cebollita">
                         </div>
                         <div class="descripcion">
                             <p>Alambres</p>
@@ -204,7 +204,7 @@
                 <div class="col-lg-4 col-md-6 mb-4">
                     <div class="comida">
                         <div class="imagenalimento">
-                            <img src="src/parrillada.png" alt="Bebida">
+                            <img src="src/parrillada.png" alt="Carne asada con cebollita, pimiento amarillo que también incluye quesadillas aparte">
                         </div>
                         <div class="descripcion">
                             <p>Parrillada</p>
@@ -215,7 +215,7 @@
                 <div class="col-lg-4 col-md-6 mb-4">
                     <div class="comida">
                         <div class="imagenalimento">
-                            <img src="src/webp/birria.webp" alt="Bebida">
+                            <img src="src/webp/birria.webp" alt="Un plato de birria que incluye un plato de con la misma frijoes">
                         </div>
                         <div class="descripcion">
                             <p>Birria</p>
@@ -231,7 +231,7 @@
                 <div class="col-lg-4 col-md-6 mb-4">
                     <div class="comida">
                         <div class="imagenalimento">
-                            <img src="src/frutosrojos.jpeg" alt="Bebida">
+                            <img src="src/frutosrojos.jpeg" alt="Bebida de agua con gas que incluye multiples frutos rojos como fresa y arandano rojo">
                         </div>
                         <div class="descripcion">
                             <p>Limonada de frutos rojos</p>
@@ -242,7 +242,7 @@
                 <div class="col-lg-4 col-md-6 mb-4">
                     <div class="comida">
                         <div class="imagenalimento">
-                            <img src="src/smothie.png" alt="Bebida">
+                            <img src="src/smothie.png" alt="Bebida fría ">
                         </div>
                         <div class="descripcion">
                             <p>Smoothie de yogurt</p>
@@ -253,7 +253,7 @@
                 <div class="col-lg-4 col-md-6 mb-4">
                     <div class="comida">
                         <div class="imagenalimento">
-                            <img src="src/cafe.png" alt="Bebida">
+                            <img src="src/cafe.png" alt="Bebida caliente de café de olla ">
                         </div>
                         <div class="descripcion">
                             <p>Café</p>
@@ -268,15 +268,21 @@
                 <h4  class="text-center  text-white">San Antonio y su cocina</h4>
                 <h5 class="text-center  text-white">Puedes contactarnos vía</h5>
                 <div class="redes-sociales">
-                    <a href="https://wa.me/3122911972" target="_blank">
-                        <img src="src/whatsapp.png" alt="WhatsApp">
-                    </a>
-                    <a href="https://instagram.com/san_antonio_y_su_cocina?igshid=NGExMmI2YTkyZg==" target="_blank">
-                        <img src="src/instagram.png" alt="Instagram">
-                    </a>
-                    <a href="https://www.facebook.com/profile.php?id=100083865452803&mibextid=ZbWKwL" target="_blank">
-                        <img src="src/facebook.png" alt="Facebook">
-                    </a>
+                    <button>
+                        <a href="https://wa.me/3122911972" target="_blank">
+                            <img src="src/whatsapp.png" alt="WhatsApp">
+                        </a>
+                    </button>
+                    <button>
+                        <a href="https://instagram.com/san_antonio_y_su_cocina?igshid=NGExMmI2YTkyZg==" target="_blank">
+                            <img src="src/instagram.png" alt="Instagram">
+                        </a>
+                    </button>
+                    <button>
+                        <a href="https://www.facebook.com/profile.php?id=100083865452803&mibextid=ZbWKwL" target="_blank">
+                            <img src="src/facebook.png" alt="Facebook">
+                        </a>
+                    </button>
                 </div>
                 <h6 class="text-center  text-white">Agradecemos su visita</h6>
 
